corrigiendo car.ned y ped.ned

--- a/src/networks/MoST_Scenario/omnetpp2.ini
+++ b/src/networks/MoST_Scenario/omnetpp2.ini
@@ -18,7 +18,7 @@ print-undisposed = false
 sim-time-limit = 1000s
 
 **.scalar-recording = true
-**.vector-recording = true
+**.vector-recording = false
 
 **.debug = true
 **.coreDebug = true
@@ -129,7 +129,7 @@ sim-time-limit = 1000s
 ##########################################################
 #                    WaveAppLayer                        #
 ##########################################################
-*.node[*].applType = "myWaveAppLayer"
+*.node[*].applType = "ca_system.modules.application.myWaveAppLayer"
 *.node[*].appl.headerLength = 80 bit
 *.node[*].appl.sendBeacons = true
 *.node[*].appl.dataOnSch = false
@@ -138,7 +138,7 @@ sim-time-limit = 1000s
 *.node[*].appl.dataUserPriority = 7
 *.node[*].appl.beaconLengthBits = 1472 bit
 
-*.Pednode[*].applType = "PedAppLayer"
+*.Pednode[*].applType = "ca_system.modules.application.PedAppLayer"
 *.Pednode[*].appl.headerLength = 80 bit
 *.Pednode[*].appl.sendBeacons = true
 *.Pednode[*].appl.dataOnSch = false
@@ -147,7 +147,7 @@ sim-time-limit = 1000s
 *.Pednode[*].appl.dataUserPriority = 7
 *.Pednode[*].appl.beaconLengthBits = 1472 bit
 
-*.Bicyclenode[*].applType = "CycleAppLayer"
+*.Bicyclenode[*].applType = "ca_system.modules.application.CycleAppLayer"
 *.Bicyclenode[*].appl.headerLength = 80 bit
 *.Bicyclenode[*].appl.sendBeacons = true
 *.Bicyclenode[*].appl.dataOnSch = false
@@ -156,7 +156,7 @@ sim-time-limit = 1000s
 *.Bicyclenode[*].appl.dataUserPriority = 7
 *.Bicyclenode[*].appl.beaconLengthBits = 1472 bit
 
-*.Bikenode[*].applType = "CycleAppLayer"
+*.Bikenode[*].applType = "ca_system.modules.application.CycleAppLayer"
 *.Bikenode[*].appl.headerLength = 80 bit
 *.Bikenode[*].appl.sendBeacons = true
 *.Bikenode[*].appl.dataOnSch = false
@@ -298,7 +298,7 @@ repeat=5
 ###########################################################
 ## Only VRU OnStreet send beacons with r=1Hz,2Hz,5Hz,10Hz #
 ###########################################################
-[Config Ped_Crossing-OnStreet]
+[Config Ped_Crossing-OnStreet-200bytes]
 
 **.vector-recording = false
 cmdenv-express-mode = true
@@ -402,13 +402,13 @@ cmdenv-express-mode = true
 
 sim-time-limit = ${23510s,28510s,33510s,38510s !DEN} #18510s, ,43510s
 
-repeat=10
+repeat=5
 
 
 ###############################################################
 ## Only VRU whit Speed>0 send beacons with r=1Hz,2Hz,5Hz,10Hz #
 ###############################################################
-[Config Ped_Crossing-MovinPed]
+[Config Ped_Crossing-MovinPed-200bytes]
 
 #**.vector-recording = true
 #**.debug = true
@@ -515,13 +515,13 @@ repeat=10
 
 sim-time-limit = ${23510s,28510s,33510s,38510s !DEN} #18510s, ,43510s
 
-repeat=10
+repeat=5
 
 ########################################################
 ## VRU whit Speed>0 send beacons with r=5Hz else r=2Hz #
 ########################################################
 
-[Config Ped_Crossing-MultipleTx]
+[Config Ped_Crossing-MultipleTx-200bytes]
 
 **.vector-recording = false
 cmdenv-express-mode = true
@@ -623,4 +623,4 @@ cmdenv-express-mode = true
 
 sim-time-limit = ${23510s,28510s,33510s,38510s !DEN} #18510s, ,43510s
 
-repeat=10
+repeat=5
