--- a/src/networks/MoST_Scenario/omnetpp2.ini
+++ b/src/networks/MoST_Scenario/omnetpp2.ini
@@ -36,8 +36,8 @@ sim-time-limit = 1000s
 ##########################################################
 # Obstacle parameters                                    #
 ##########################################################
-#*.obstacles.debug = true
-#*.obstacles.obstacles = xmldoc("config.xml", "//AnalogueModel[@type='SimpleObstacleShadowing']/obstacles")
+*.obstacles.debug = false
+*.obstacles.obstacles = xmldoc("config.xml", "//AnalogueModel[@type='SimpleObstacleShadowing']/obstacles")
 
 ##########################################################
 #            TraCIScenarioManager parameters             #
