Subiendo resultados con nueva forma de PDR basada en paquetes enviados deseados

--- a/src/networks/MoST_Scenario/omnetpp2.ini
+++ b/src/networks/MoST_Scenario/omnetpp2.ini
@@ -20,8 +20,8 @@ sim-time-limit = 1000s
 **.scalar-recording = true
 **.vector-recording = false
 
-**.debug = true
-**.coreDebug = true
+**.debug = false
+**.coreDebug = false
 
 *.playgroundSizeX = 10000m
 *.playgroundSizeY = 10000m
@@ -195,7 +195,7 @@ sim-time-limit = 1000s
 ###################################################
 ## All nodes send beacons with r=1Hz,2Hz,5Hz,10Hz #
 ###################################################
-[Config Ped_Crossing-BL-NoObstacle-200bytes]
+[Config Ped_Crossing-BL-WithObstacle-200bytes]
 
 **.vector-recording = false
 cmdenv-express-mode = true
