New scenario without parking area

--- a/src/networks/MoST_Scenario/omnetpp2.ini
+++ b/src/networks/MoST_Scenario/omnetpp2.ini
@@ -53,10 +53,13 @@ sim-time-limit = 1000s
 *.manager.moduleName = "moped=Bikenode motorcycle=Bikenode slowbicycle=Bicyclenode  fastbicycle=Bicyclenode avgbicycle=Bicyclenode *=node"
 *.manager.moduleDisplayString = "moped='i=veins/node/bike;is=s' motorcycle='i=veins/node/bike;is=s' slowbicycle='i=veins/node/bicycle;is=s' fastbicycle='i=veins/node/bicycle;is=s' avgbicycle='i=veins/node/bicycle;is=s' *='i=veins/node/car;is=vs'"
 
-#*.manager.moduleType = "typePassenger=org.car2x.veins.nodes.Car ped=org.car2x.veins.nodes.Car"
-#*.manager.moduleName = "typePassenger=node ped=Pednode"
-#*.manager.moduleDisplayString = "typePassenger='i=veins/node/pedestrian;is=vs' ped='i=veins/node/pedestrian;is=vs'"
-#
+*.manager.PedmoduleType = "ca_system.nodes.Car"
+*.manager.PedmoduleName = "Pednode"
+*.manager.moduleDisplayString = "i=veins/node/pedestrian;is=vs"
+
+#        string PedmoduleType = default("ca_system.nodes.Car");  // module type to be used in the simulation for each managed pedestrian
+#        string PedmoduleName = default("Pednode");  // module name to be used in the simulation for each managed vehicle
+#        string PedmoduleDisplayString = default("i=veins/node/pedestrian;is=vs");
 #INFO (TraCIScenarioManagerLaunchd)MoST_scenario.manager: DEFAULT_PEDTYPE
 #INFO (TraCIScenarioManagerLaunchd)MoST_scenario.manager: avgbicycle
 #INFO (TraCIScenarioManagerLaunchd)MoST_scenario.manager: avgpedestrian
@@ -195,7 +198,7 @@ sim-time-limit = 1000s
 ###################################################
 ## All nodes send beacons with r=1Hz,2Hz,5Hz,10Hz #
 ###################################################
-[Config Ped_Crossing-BL-WithObstacle-200bytes]
+[Config Ped_Crossing-BL-WithObstacle-200bytes-S2]
 
 **.vector-recording = false
 cmdenv-express-mode = true
@@ -206,8 +209,8 @@ cmdenv-express-mode = true
 
 # Set Scenario 
 
-*.manager.firstStepAt = ${DEN=23500s,28500s,33500s,38500s} # 18500s,43500s} 
-*.manager.roiRects = "4735,2149-4935,2349"
+*.manager.firstStepAt = ${DEN=23500s,26000s,28500s,31000}#33500s,38500s} # 18500s,43500s} 
+*.manager.roiRects = "4735,2215-4935,2415"
 
 #########################
 #### Normal Vehicle #####
@@ -290,7 +293,7 @@ cmdenv-express-mode = true
 *.Bikenode[*].appl.sendWSA = false 
 
 
-sim-time-limit = ${23510s,28510s,33510s,38510s !DEN} #18510s, ,43510s
+sim-time-limit = ${23510s,26010s,28510s,31010s !DEN} #18510s, ,43510s
 
 repeat=5
 
