--- a/src/networks/MoST_Scenario/omnetpp2.ini
+++ b/src/networks/MoST_Scenario/omnetpp2.ini
@@ -209,7 +209,7 @@ cmdenv-express-mode = true
 
 # Set Scenario 
 
-*.manager.firstStepAt = ${DEN=23500s,26000s,28500s,31000}#33500s,38500s} # 18500s,43500s} 
+*.manager.firstStepAt = ${DEN=23500s,26000s,28500s,31000s}#33500s,38500s} # 18500s,43500s} 
 *.manager.roiRects = "4735,2215-4935,2415"
 
 #########################
