explorando nuevos escenarios S2

--- a/src/networks/MoST_Scenario/omnetpp2.ini
+++ b/src/networks/MoST_Scenario/omnetpp2.ini
@@ -209,7 +209,7 @@ cmdenv-express-mode = true
 
 # Set Scenario 
 
-*.manager.firstStepAt = ${DEN=23500s,26000s,28500s,31000s}#33500s,38500s} # 18500s,43500s} 
+*.manager.firstStepAt = ${DEN=18500s,21000s,33500s,36000s,38500s}#33500s,38500s} # 18500s,43500s} 
 *.manager.roiRects = "4735,2215-4935,2415"
 
 #########################
@@ -293,7 +293,7 @@ cmdenv-express-mode = true
 *.Bikenode[*].appl.sendWSA = false 
 
 
-sim-time-limit = ${23510s,26010s,28510s,31010s !DEN} #18510s, ,43510s
+sim-time-limit = ${18510s,21010s,33510s,36010s,38510s !DEN} #18510s, ,43510s
 
 repeat=5
 
