--- a/src/networks/MoST_Scenario/omnetpp2.ini
+++ b/src/networks/MoST_Scenario/omnetpp2.ini
@@ -198,7 +198,7 @@ sim-time-limit = 1000s
 ###################################################
 ## All nodes send beacons with r=1Hz,2Hz,5Hz,10Hz #
 ###################################################
-[Config Ped_Crossing-BL-WithObstacle-200bytes-S2]
+[Config Ped_Crossing-BL-WithObstacle-S4]
 
 **.vector-recording = false
 cmdenv-express-mode = true
@@ -209,7 +209,7 @@ cmdenv-express-mode = true
 
 # Set Scenario 
 
-*.manager.firstStepAt = ${DEN=18500s,21000s,33500s,36000s,38500s}#33500s,38500s} # 18500s,43500s} 
+*.manager.firstStepAt = ${DEN=21906s,22037s,22387s,22556s}#33500s,38500s} # 18500s,43500s} 
 *.manager.roiRects = "4735,2215-4935,2415"
 
 #########################
@@ -293,7 +293,7 @@ cmdenv-express-mode = true
 *.Bikenode[*].appl.sendWSA = false 
 
 
-sim-time-limit = ${18510s,21010s,33510s,36010s,38510s !DEN} #18510s, ,43510s
+sim-time-limit = ${21909s,22040s,22390s,22559s !DEN} #18510s, ,43510s
 
 repeat=5
 
@@ -301,7 +301,7 @@ repeat=5
 ###########################################################
 ## Only VRU OnStreet send beacons with r=1Hz,2Hz,5Hz,10Hz #
 ###########################################################
-[Config Ped_Crossing-OnStreet-200bytes]
+[Config Ped_Crossing-OnStreet-S4]
 
 **.vector-recording = false
 cmdenv-express-mode = true
@@ -312,8 +312,8 @@ cmdenv-express-mode = true
 
 # Set Scenario 
 
-*.manager.firstStepAt = ${DEN=23500s,28500s,33500s,38500s} # 18500s,43500s} 
-*.manager.roiRects = "4735,2149-4935,2349"
+*.manager.firstStepAt = ${DEN=21906s,22037s,22387s,22556s}#33500s,38500s} # 18500s,43500s} 
+*.manager.roiRects = "4735,2215-4935,2415"
 
 #########################
 #### Normal Vehicle #####
@@ -403,7 +403,7 @@ cmdenv-express-mode = true
 *.Bikenode[*].appl.OnStreet = true
 
 
-sim-time-limit = ${23510s,28510s,33510s,38510s !DEN} #18510s, ,43510s
+sim-time-limit = ${21909s,22040s,22390s,22559s !DEN} 
 
 repeat=5
 
@@ -411,7 +411,7 @@ repeat=5
 ###############################################################
 ## Only VRU whit Speed>0 send beacons with r=1Hz,2Hz,5Hz,10Hz #
 ###############################################################
-[Config Ped_Crossing-MovinPed-200bytes]
+[Config Ped_Crossing-MovinPed-S4]
 
 #**.vector-recording = true
 #**.debug = true
@@ -425,8 +425,8 @@ repeat=5
 
 # Set Scenario 
 
-*.manager.firstStepAt = ${DEN=23500s,28500s,33500s,38500s} # 18500s,43500s} 
-*.manager.roiRects = "4735,2149-4935,2349"
+*.manager.firstStepAt = ${DEN=21906s,22037s,22387s,22556s}#33500s,38500s} # 18500s,43500s} 
+*.manager.roiRects = "4735,2215-4935,2415"
 
 #########################
 #### Normal Vehicle #####
@@ -450,7 +450,7 @@ repeat=5
 *.node[*].veinsmobility.accidentCount = 0 #0 #1
 *.node[10].veinsmobility.accidentStart =  50000s#120s #95s
 *.node[10].veinsmobility.accidentDuration = 5s
-*.node[10].appl.Accident_start = 50000#120 #95
+*.node[10].appl.Accident_start = 50000 #120 #95
 *.node[10].appl.MeInAcc = false
 
 ###########################
@@ -516,7 +516,7 @@ repeat=5
 *.Bikenode[*].appl.MovinPed = true
 
 
-sim-time-limit = ${23510s,28510s,33510s,38510s !DEN} #18510s, ,43510s
+sim-time-limit = ${21909s,22040s,22390s,22559s !DEN} 
 
 repeat=5
 
@@ -524,7 +524,7 @@ repeat=5
 ## VRU whit Speed>0 send beacons with r=5Hz else r=2Hz #
 ########################################################
 
-[Config Ped_Crossing-MultipleTx-200bytes]
+[Config Ped_Crossing-MultipleTx-S4]
 
 **.vector-recording = false
 cmdenv-express-mode = true
@@ -535,8 +535,8 @@ cmdenv-express-mode = true
 
 # Set Scenario 
 
-*.manager.firstStepAt = ${DEN=23500s,28500s,33500s,38500s} # 18500s,43500s} 
-*.manager.roiRects = "4735,2149-4935,2349"
+*.manager.firstStepAt = ${DEN=21906s,22037s,22387s,22556s}#33500s,38500s} # 18500s,43500s} 
+*.manager.roiRects = "4735,2215-4935,2415"
 
 #########################
 #### Normal Vehicle #####
@@ -624,6 +624,6 @@ cmdenv-express-mode = true
 *.Bikenode[*].appl.MultipleTx = true
 
 
-sim-time-limit = ${23510s,28510s,33510s,38510s !DEN} #18510s, ,43510s
+sim-time-limit = ${21909s,22040s,22390s,22559s !DEN} 
 
 repeat=5
