modificando extración de resultados para S4

--- a/src/networks/MoST_Scenario/omnetpp2.ini
+++ b/src/networks/MoST_Scenario/omnetpp2.ini
@@ -37,7 +37,7 @@ sim-time-limit = 1000s
 # Obstacle parameters                                    #
 ##########################################################
 *.obstacles.debug = false
-*.obstacles.obstacles = xmldoc("config.xml", "//AnalogueModel[@type='SimpleObstacleShadowing']/obstacles")
+#*.obstacles.obstacles = xmldoc("config.xml", "//AnalogueModel[@type='SimpleObstacleShadowing']/obstacles")
 
 ##########################################################
 #            TraCIScenarioManager parameters             #
@@ -198,7 +198,7 @@ sim-time-limit = 1000s
 ###################################################
 ## All nodes send beacons with r=1Hz,2Hz,5Hz,10Hz #
 ###################################################
-[Config Ped_Crossing-BL-WithObstacle-S4]
+[Config Ped_Crossing-BL-NoObstacle-S4]
 
 **.vector-recording = false
 cmdenv-express-mode = true
