--- a/src/networks/MoST_Scenario/omnetpp2.ini
+++ b/src/networks/MoST_Scenario/omnetpp2.ini
@@ -209,7 +209,7 @@ cmdenv-express-mode = true
 
 # Set Scenario 
 
-*.manager.firstStepAt = ${DEN=21906s,22037s,22387s,22556s}#33500s,38500s} # 18500s,43500s} 
+*.manager.firstStepAt = ${DEN=22406s,22537s,22887s,23056s} #33500s,38500s} # 18500s,43500s} 
 *.manager.roiRects = "4735,2215-4935,2415"
 
 #########################
@@ -293,7 +293,7 @@ cmdenv-express-mode = true
 *.Bikenode[*].appl.sendWSA = false 
 
 
-sim-time-limit = ${21909s,22040s,22390s,22559s !DEN} #18510s, ,43510s
+sim-time-limit = ${22409s,22540s,22890s,23059s !DEN}
 
 repeat=5
 
@@ -312,7 +312,7 @@ cmdenv-express-mode = true
 
 # Set Scenario 
 
-*.manager.firstStepAt = ${DEN=21906s,22037s,22387s,22556s}#33500s,38500s} # 18500s,43500s} 
+*.manager.firstStepAt = ${DEN=22406s,22537s,22887s,23056s} 
 *.manager.roiRects = "4735,2215-4935,2415"
 
 #########################
@@ -403,7 +403,7 @@ cmdenv-express-mode = true
 *.Bikenode[*].appl.OnStreet = true
 
 
-sim-time-limit = ${21909s,22040s,22390s,22559s !DEN} 
+sim-time-limit = ${22409s,22540s,22890s,23059s !DEN}
 
 repeat=5
 
@@ -425,7 +425,7 @@ repeat=5
 
 # Set Scenario 
 
-*.manager.firstStepAt = ${DEN=21906s,22037s,22387s,22556s}#33500s,38500s} # 18500s,43500s} 
+*.manager.firstStepAt = ${DEN=22406s,22537s,22887s,23056s} 
 *.manager.roiRects = "4735,2215-4935,2415"
 
 #########################
@@ -516,8 +516,7 @@ repeat=5
 *.Bikenode[*].appl.MovinPed = true
 
 
-sim-time-limit = ${21909s,22040s,22390s,22559s !DEN} 
-
+sim-time-limit = ${22409s,22540s,22890s,23059s !DEN}
 repeat=5
 
 ########################################################
@@ -535,7 +534,7 @@ cmdenv-express-mode = true
 
 # Set Scenario 
 
-*.manager.firstStepAt = ${DEN=21906s,22037s,22387s,22556s}#33500s,38500s} # 18500s,43500s} 
+*.manager.firstStepAt = ${DEN=22406s,22537s,22887s,23056s}  
 *.manager.roiRects = "4735,2215-4935,2415"
 
 #########################
@@ -624,6 +623,6 @@ cmdenv-express-mode = true
 *.Bikenode[*].appl.MultipleTx = true
 
 
-sim-time-limit = ${21909s,22040s,22390s,22559s !DEN} 
+sim-time-limit = ${22409s,22540s,22890s,23059s !DEN}
 
 repeat=5
