nuevos segundos de simulación

--- a/src/networks/MoST_Scenario/omnetpp2.ini
+++ b/src/networks/MoST_Scenario/omnetpp2.ini
@@ -37,7 +37,7 @@ sim-time-limit = 1000s
 # Obstacle parameters                                    #
 ##########################################################
 *.obstacles.debug = false
-*.obstacles.obstacles = xmldoc("config.xml", "//AnalogueModel[@type='SimpleObstacleShadowing']/obstacles")
+#*.obstacles.obstacles = xmldoc("config.xml", "//AnalogueModel[@type='SimpleObstacleShadowing']/obstacles")
 
 ##########################################################
 #            TraCIScenarioManager parameters             #
@@ -198,7 +198,7 @@ sim-time-limit = 1000s
 ###################################################
 ## All nodes send beacons with r=1Hz,2Hz,5Hz,10Hz #
 ###################################################
-[Config Ped_Crossing-BL-WithObstacle-S4]
+[Config Ped_Crossing-BL-NoObstacle-S4]
 
 **.vector-recording = false
 cmdenv-express-mode = true
@@ -209,7 +209,7 @@ cmdenv-express-mode = true
 
 # Set Scenario 
 
-*.manager.firstStepAt = ${DEN=22406s,22537s,22887s,23056s} #33500s,38500s} # 18500s,43500s} 
+*.manager.firstStepAt = ${DEN=20599s,22330s,22113s,23916s} #33500s,38500s} # 18500s,43500s} 
 *.manager.roiRects = "4735,2215-4935,2415"
 
 #########################
@@ -293,7 +293,7 @@ cmdenv-express-mode = true
 *.Bikenode[*].appl.sendWSA = false 
 
 
-sim-time-limit = ${22409s,22540s,22890s,23059s !DEN}
+sim-time-limit = ${20602s,22333s,22116s,23919s !DEN}
 
 repeat=5
 
@@ -312,7 +312,7 @@ cmdenv-express-mode = true
 
 # Set Scenario 
 
-*.manager.firstStepAt = ${DEN=22406s,22537s,22887s,23056s} 
+*.manager.firstStepAt = ${DEN=20599s,22330s,22113s,23916s}
 *.manager.roiRects = "4735,2215-4935,2415"
 
 #########################
@@ -403,7 +403,7 @@ cmdenv-express-mode = true
 *.Bikenode[*].appl.OnStreet = true
 
 
-sim-time-limit = ${22409s,22540s,22890s,23059s !DEN}
+sim-time-limit = ${20602s,22333s,22116s,23919s !DEN}
 
 repeat=5
 
@@ -425,7 +425,7 @@ repeat=5
 
 # Set Scenario 
 
-*.manager.firstStepAt = ${DEN=22406s,22537s,22887s,23056s} 
+*.manager.firstStepAt = ${DEN=20599s,22330s,22113s,23916s}
 *.manager.roiRects = "4735,2215-4935,2415"
 
 #########################
@@ -516,7 +516,7 @@ repeat=5
 *.Bikenode[*].appl.MovinPed = true
 
 
-sim-time-limit = ${22409s,22540s,22890s,23059s !DEN}
+sim-time-limit = ${20602s,22333s,22116s,23919s !DEN}
 repeat=5
 
 ########################################################
@@ -534,7 +534,7 @@ cmdenv-express-mode = true
 
 # Set Scenario 
 
-*.manager.firstStepAt = ${DEN=22406s,22537s,22887s,23056s}  
+*.manager.firstStepAt = ${DEN=20599s,22330s,22113s,23916s}
 *.manager.roiRects = "4735,2215-4935,2415"
 
 #########################
@@ -623,6 +623,6 @@ cmdenv-express-mode = true
 *.Bikenode[*].appl.MultipleTx = true
 
 
-sim-time-limit = ${22409s,22540s,22890s,23059s !DEN}
+sim-time-limit = ${20602s,22333s,22116s,23919s !DEN}
 
 repeat=5
