composición de nodos para nuevo escenario

--- a/src/networks/MoST_Scenario/omnetpp2.ini
+++ b/src/networks/MoST_Scenario/omnetpp2.ini
@@ -15,7 +15,7 @@ network = MoST_scenario
 debug-on-errors = false
 print-undisposed = false
 
-sim-time-limit = 1000s
+#sim-time-limit = 1000s
 
 **.scalar-recording = true
 **.vector-recording = false
@@ -198,7 +198,7 @@ sim-time-limit = 1000s
 ###################################################
 ## All nodes send beacons with r=1Hz,2Hz,5Hz,10Hz #
 ###################################################
-[Config Ped_Crossing-BL-NoObstacle-S4]
+[Config Ped_Crossing-BL-NoObstacle-S5]
 
 **.vector-recording = false
 cmdenv-express-mode = true
@@ -209,7 +209,7 @@ cmdenv-express-mode = true
 
 # Set Scenario 
 
-*.manager.firstStepAt = ${DEN=20599s,22330s,22113s,23916s} #33500s,38500s} # 18500s,43500s} 
+*.manager.firstStepAt = ${DEN=20595s,22326s,22109s,23912s} #33500s,38500s} # 18500s,43500s} 
 *.manager.roiRects = "4735,2215-4935,2415"
 
 #########################
@@ -293,9 +293,9 @@ cmdenv-express-mode = true
 *.Bikenode[*].appl.sendWSA = false 
 
 
-sim-time-limit = ${20602s,22333s,22116s,23919s !DEN}
+sim-time-limit = ${20605s,22336s,22119s,23922s !DEN}
 
-repeat=5
+#repeat=5
 
 
 ###########################################################
