--- a/src/networks/MoST_Scenario/omnetpp2.ini
+++ b/src/networks/MoST_Scenario/omnetpp2.ini
@@ -31,7 +31,7 @@ print-undisposed = false
 ##########################################################
 # Annotation parameters                                  #
 ##########################################################
-*.annotations.draw = true
+*.annotations.draw = false
 
 ##########################################################
 # Obstacle parameters                                    #
@@ -42,7 +42,7 @@ print-undisposed = false
 ##########################################################
 #            TraCIScenarioManager parameters             #
 ##########################################################
-*.manager.updateInterval = 0.1s
+*.manager.updateInterval = 1s
 *.manager.host = "localhost"
 *.manager.port = 9999
 *.manager.autoShutdown = true
@@ -222,7 +222,7 @@ cmdenv-express-mode = true
 *.node[*].appl.Slotted_tau = 0.005 #1.45
 
 *.node[*].appl.beaconInterval = ${BL= 1s,0.5s,0.2s,0.1s } # 1Hz, 2Hz, 5Hz, 10Hz
-*.node[*].appl.NTL_target =0# ${NTL=0}#,1,2}
+*.node[*].appl.NTL_target =0 # ${NTL=0}#,1,2}
 *.node[*].appl.aware = false
 
 *.node[*].appl.dataOnSch = false  # Setear en false para realizar diseminación
