fijando seed y determinando nuevos escenarios

--- a/src/networks/MoST_Scenario/omnetpp2.ini
+++ b/src/networks/MoST_Scenario/omnetpp2.ini
@@ -57,32 +57,6 @@ print-undisposed = false
 *.manager.PedmoduleName = "Pednode"
 *.manager.moduleDisplayString = "i=veins/node/pedestrian;is=vs"
 
-#        string PedmoduleType = default("ca_system.nodes.Car");  // module type to be used in the simulation for each managed pedestrian
-#        string PedmoduleName = default("Pednode");  // module name to be used in the simulation for each managed vehicle
-#        string PedmoduleDisplayString = default("i=veins/node/pedestrian;is=vs");
-#INFO (TraCIScenarioManagerLaunchd)MoST_scenario.manager: DEFAULT_PEDTYPE
-#INFO (TraCIScenarioManagerLaunchd)MoST_scenario.manager: avgbicycle
-#INFO (TraCIScenarioManagerLaunchd)MoST_scenario.manager: avgpedestrian
-#INFO (TraCIScenarioManagerLaunchd)MoST_scenario.manager: bus
-#INFO (TraCIScenarioManagerLaunchd)MoST_scenario.manager: fastbicycle
-#INFO (TraCIScenarioManagerLaunchd)MoST_scenario.manager: fastpedestrian
-#INFO (TraCIScenarioManagerLaunchd)MoST_scenario.manager: moped
-#INFO (TraCIScenarioManagerLaunchd)MoST_scenario.manager: motorcycle
-#INFO (TraCIScenarioManagerLaunchd)MoST_scenario.manager: passenger1
-#INFO (TraCIScenarioManagerLaunchd)MoST_scenario.manager: passenger2a
-#INFO (TraCIScenarioManagerLaunchd)MoST_scenario.manager: passenger2b
-#INFO (TraCIScenarioManagerLaunchd)MoST_scenario.manager: passenger3
-#INFO (TraCIScenarioManagerLaunchd)MoST_scenario.manager: passenger4
-#INFO (TraCIScenarioManagerLaunchd)MoST_scenario.manager: slowbicycle
-#INFO (TraCIScenarioManagerLaunchd)MoST_scenario.manager: slowpedestrian
-#INFO (TraCIScenarioManagerLaunchd)MoST_scenario.manager: taxi
-#INFO (TraCIScenarioManagerLaunchd)MoST_scenario.manager: train
-#INFO (TraCIScenarioManagerLaunchd)MoST_scenario.manager: uber
-#INFO (TraCIScenarioManagerLaunchd)MoST_scenario.manager: bicycle
-#INFO (TraCIScenarioManagerLaunchd)MoST_scenario.manager: on-demand
-#INFO (TraCIScenarioManagerLaunchd)MoST_scenario.manager: passenger
-#INFO (TraCIScenarioManagerLaunchd)MoST_scenario.manager: pedestrian
-#INFO (TraCIScenarioManagerLaunchd)MoST_scenario.manager: ptw
 
 ##########################################################
 #                       RSU SETTINGS                     #
@@ -133,72 +107,36 @@ print-undisposed = false
 #                    WaveAppLayer                        #
 ##########################################################
 *.node[*].applType = "ca_system.modules.application.myWaveAppLayer"
-*.node[*].appl.headerLength = 80 bit
-*.node[*].appl.sendBeacons = true
-*.node[*].appl.dataOnSch = false
-*.node[*].appl.beaconInterval = 1s
-*.node[*].appl.beaconUserPriority = 5
-*.node[*].appl.dataUserPriority = 7
-*.node[*].appl.beaconLengthBits = 1472 bit
+*.**.appl.headerLength = 80 bit
+*.**.appl.sendBeacons = false #true
+*.**.appl.dataOnSch = false
+*.**.appl.beaconInterval = 1s
+*.**.appl.beaconUserPriority = 5
+*.**.appl.dataUserPriority = 7
+*.**.appl.beaconLengthBits = 1472 bit
 
 *.Pednode[*].applType = "ca_system.modules.application.PedAppLayer"
-*.Pednode[*].appl.headerLength = 80 bit
-*.Pednode[*].appl.sendBeacons = true
-*.Pednode[*].appl.dataOnSch = false
-*.Pednode[*].appl.beaconInterval = 1s
-*.Pednode[*].appl.beaconUserPriority = 5
-*.Pednode[*].appl.dataUserPriority = 7
-*.Pednode[*].appl.beaconLengthBits = 1472 bit
-
 *.Bicyclenode[*].applType = "ca_system.modules.application.CycleAppLayer"
-*.Bicyclenode[*].appl.headerLength = 80 bit
-*.Bicyclenode[*].appl.sendBeacons = true
-*.Bicyclenode[*].appl.dataOnSch = false
-*.Bicyclenode[*].appl.beaconInterval = 1s
-*.Bicyclenode[*].appl.beaconUserPriority = 5
-*.Bicyclenode[*].appl.dataUserPriority = 7
-*.Bicyclenode[*].appl.beaconLengthBits = 1472 bit
-
 *.Bikenode[*].applType = "ca_system.modules.application.CycleAppLayer"
-*.Bikenode[*].appl.headerLength = 80 bit
-*.Bikenode[*].appl.sendBeacons = true
-*.Bikenode[*].appl.dataOnSch = false
-*.Bikenode[*].appl.beaconInterval = 1s
-*.Bikenode[*].appl.beaconUserPriority = 5
-*.Bikenode[*].appl.dataUserPriority = 7
-*.Bikenode[*].appl.beaconLengthBits = 1472 bit #200bytes
+
 
 ##########################################################
 #                      Mobility                          #
 ##########################################################
-*.node[*].veinsmobilityType.debug = false
-*.node[*].veinsmobility.x = 0
-*.node[*].veinsmobility.y = 0
-*.node[*].veinsmobility.z = 1.895
-*.node[*].veinsmobility.accidentCount = 1
-*.node[*].veinsmobility.accidentStart = 3s
-*.node[*].veinsmobility.accidentDuration = 20s
-*.node[*].appl.Accident_start = 3
+*.**.veinsmobilityType.debug = false
+*.**.veinsmobility.x = 0
+*.**.veinsmobility.y = 0
+*.**.veinsmobility.z = 1.895
+*.**.veinsmobility.accidentCount = 1
+*.**.veinsmobility.accidentStart = 100000s
+*.**.veinsmobility.accidentDuration = 20s
+*.**.appl.Accident_start = 3
 
-*.Pednode[*].veinsmobilityType.debug = false
-*.Pednode[*].veinsmobility.x = 0
-*.Pednode[*].veinsmobility.y = 0
-*.Pednode[*].veinsmobility.z = 1.895
-
-*.Bicyclenode[*].veinsmobilityType.debug = false
-*.Bicyclenode[*].veinsmobility.x = 0
-*.Bicyclenode[*].veinsmobility.y = 0
-*.Bicyclenode[*].veinsmobility.z = 1.895
-
-*.Bikenode[*].veinsmobilityType.debug = false
-*.Bikenode[*].veinsmobility.x = 0
-*.Bikenode[*].veinsmobility.y = 0
-*.Bikenode[*].veinsmobility.z = 1.895
 
 ###################################################
 ## All nodes send beacons with r=1Hz,2Hz,5Hz,10Hz #
 ###################################################
-[Config Ped_Crossing-BL-NoObstacle-S5]
+[Config Ped_Crossing-BL-NoObstacle-S8]
 
 **.vector-recording = false
 cmdenv-express-mode = true
@@ -209,91 +147,31 @@ cmdenv-express-mode = true
 
 # Set Scenario 
 
-*.manager.firstStepAt = ${DEN=20595s,22326s,22109s,23912s} #33500s,38500s} # 18500s,43500s} 
+*.manager.firstStepAt = ${DEN = 18000s, 19000s, 20000s, 21000s, 22000s, 23000s 28000s 29000s 30000s}  #18000s #${DEN=20595s,22326s,22109s,23912s} #33500s,38500s} # 18500s,43500s} 
 *.manager.roiRects = "4735,2215-4935,2415"
 
-#########################
-#### Normal Vehicle #####
-#########################
+*.**.appl.Slotted1Enabled = true
+*.**.appl.Slotted_Ns = 3 #${3 ,2} 
+*.**.appl.Slotted_R = 300 #40
+*.**.appl.Slotted_tau = 0.005 #1.45
 
-*.node[*].appl.Slotted1Enabled = true
-*.node[*].appl.Slotted_Ns = 3 #${3 ,2} 
-*.node[*].appl.Slotted_R = 300 #40
-*.node[*].appl.Slotted_tau = 0.005 #1.45
+*.**.appl.beaconInterval = 1s #${BL= 1s,0.5s,0.2s,0.1s } # 1Hz, 2Hz, 5Hz, 10Hz
+*.**.appl.NTL_target =0 # ${NTL=0}#,1,2}
+*.**.appl.aware = false
 
-*.node[*].appl.beaconInterval = ${BL= 1s,0.5s,0.2s,0.1s } # 1Hz, 2Hz, 5Hz, 10Hz
-*.node[*].appl.NTL_target =0 # ${NTL=0}#,1,2}
-*.node[*].appl.aware = false
+*.**.appl.dataOnSch = false  # Setear en false para realizar diseminación
 
-*.node[*].appl.dataOnSch = false  # Setear en false para realizar diseminación
-
-*.node[*].appl.Send_Per_WSM = false
-*.node[*].appl.sendWSA = false 
+*.**.appl.Send_Per_WSM = false
+*.**.appl.sendWSA = false 
 
 *.node[*].veinsmobility.accidentCount = 0 #0 #1
-*.node[10].veinsmobility.accidentStart =  50000s#120s #95s
+*.node[10].veinsmobility.accidentStart =  500000s#120s #95s
 *.node[10].veinsmobility.accidentDuration = 5s
 *.node[10].appl.Accident_start = 50000#120 #95
 *.node[10].appl.MeInAcc = false
 
-###########################
-#### Pedestrian Nodes #####
-###########################
 
-*.Pednode[*].appl.Slotted1Enabled = true
-*.Pednode[*].appl.Slotted_Ns = 3 #${3 ,2} 
-*.Pednode[*].appl.Slotted_R = 300 #40
-*.Pednode[*].appl.Slotted_tau = 0.005 #1.45
-
-*.Pednode[*].appl.beaconInterval = ${1s,0.5s,0.2s,0.1s !BL} # 1Hz, 2Hz, 5Hz, 10Hz
-
-*.Pednode[*].appl.NTL_target = 0 #${0,1,2 !NTL}
-*.Pednode[*].appl.aware = false 
-
-*.Pednode[*].appl.dataOnSch = false  # Setear en false para realizar diseminación
-
-*.Pednode[*].appl.Send_Per_WSM = false
-*.Pednode[*].appl.sendWSA = false 
-
-########################
-#### Bicycle Nodes #####
-########################
-
-*.Bicyclenode[*].appl.Slotted1Enabled = true
-*.Bicyclenode[*].appl.Slotted_Ns = 3 #${3 ,2} 
-*.Bicyclenode[*].appl.Slotted_R = 300 #40
-*.Bicyclenode[*].appl.Slotted_tau = 0.005 #1.45
-
-*.Bicyclenode[*].appl.beaconInterval = ${1s,0.5s,0.2s,0.1s !BL} # 1Hz, 2Hz, 5Hz, 10Hz
-*.Bicyclenode[*].appl.NTL_target = 0 #${0,1,2 !NTL}
-*.Bicyclenode[*].appl.aware = false 
-
-*.Bicyclenode[*].appl.dataOnSch = false  # Setear en false para realizar diseminación
-
-*.Bicyclenode[*].appl.Send_Per_WSM = false
-*.Bicyclenode[*].appl.sendWSA = false 
-
-#####################
-#### Bike Nodes #####
-#####################
-
-*.Bikenode[*].appl.Slotted1Enabled = true
-*.Bikenode[*].appl.Slotted_Ns = 3 #${3 ,2} 
-*.Bikenode[*].appl.Slotted_R = 300 #40
-*.Bikenode[*].appl.Slotted_tau = 0.005 #1.45
-
-*.Bikenode[*].appl.beaconInterval = ${1s,0.5s,0.2s,0.1s !BL} # 1Hz, 2Hz, 5Hz, 10Hz
-
-*.Bikenode[*].appl.NTL_target = 0 #${0,1,2 !NTL}
-*.Bikenode[*].appl.aware = false 
-
-*.Bikenode[*].appl.dataOnSch = false  # Setear en false para realizar diseminación
-
-*.Bikenode[*].appl.Send_Per_WSM = false
-*.Bikenode[*].appl.sendWSA = false 
-
-
-sim-time-limit = ${20605s,22336s,22119s,23922s !DEN}
+sim-time-limit = ${18010s, 19010s, 20010s, 21010s, 22010s, 23010s,  28010s, 29010s, 30010s !DEN} #28000s #${20605s,22336s,22119s,23922s !DEN}
 
 #repeat=5
 
