subiendo últimos resultados de scenario 8

--- a/src/networks/MoST_Scenario/omnetpp2.ini
+++ b/src/networks/MoST_Scenario/omnetpp2.ini
@@ -27,7 +27,6 @@ print-undisposed = false
 *.playgroundSizeY = 10000m
 *.playgroundSizeZ = 50m
 
-
 ##########################################################
 # Annotation parameters                                  #
 ##########################################################
@@ -57,7 +56,6 @@ print-undisposed = false
 *.manager.PedmoduleName = "Pednode"
 *.manager.moduleDisplayString = "i=veins/node/pedestrian;is=vs"
 
-
 ##########################################################
 #                       RSU SETTINGS                     #
 #                                                        #
@@ -84,8 +82,6 @@ print-undisposed = false
 *.connectionManager.sendDirect = true #set in true originaly
 *.connectionManager.maxInterfDist = 2600m
 *.connectionManager.drawMaxIntfDist = false
-
-
 
 *.**.nic.mac1609_4.useServiceChannel = false
 
@@ -119,7 +115,6 @@ print-undisposed = false
 *.Bicyclenode[*].applType = "ca_system.modules.application.CycleAppLayer"
 *.Bikenode[*].applType = "ca_system.modules.application.CycleAppLayer"
 
-
 ##########################################################
 #                      Mobility                          #
 ##########################################################
@@ -131,7 +126,6 @@ print-undisposed = false
 *.**.veinsmobility.accidentStart = 100000s
 *.**.veinsmobility.accidentDuration = 20s
 *.**.appl.Accident_start = 3
-
 
 ###################################################
 ## All nodes send beacons with r=1Hz,2Hz,5Hz,10Hz #
@@ -147,7 +141,7 @@ cmdenv-express-mode = true
 
 # Set Scenario 
 
-*.manager.firstStepAt = ${DEN = 18000s, 19000s, 20000s, 21000s, 22000s, 23000s 28000s 29000s 30000s}  #18000s #${DEN=20595s,22326s,22109s,23912s} #33500s,38500s} # 18500s,43500s} 
+*.manager.firstStepAt = ${DEN = 18000s, 19000s, 20000s, 21000s, 22000s, 23000s, 28000s, 29000s, 30000s}  #18000s #${DEN=20595s,22326s,22109s,23912s} #33500s,38500s} # 18500s,43500s} 
 *.manager.roiRects = "4735,2215-4935,2415"
 
 *.**.appl.Slotted1Enabled = true
@@ -155,7 +149,7 @@ cmdenv-express-mode = true
 *.**.appl.Slotted_R = 300 #40
 *.**.appl.Slotted_tau = 0.005 #1.45
 
-*.**.appl.beaconInterval = 1s #${BL= 1s,0.5s,0.2s,0.1s } # 1Hz, 2Hz, 5Hz, 10Hz
+*.**.appl.beaconInterval = ${BL= 1s,0.5s,0.2s,0.1s} # 1Hz, 2Hz, 5Hz, 10Hz
 *.**.appl.NTL_target =0 # ${NTL=0}#,1,2}
 *.**.appl.aware = false
 
@@ -171,7 +165,7 @@ cmdenv-express-mode = true
 *.node[10].appl.MeInAcc = false
 
 
-sim-time-limit = ${18010s, 19010s, 20010s, 21010s, 22010s, 23010s,  28010s, 29010s, 30010s !DEN} #28000s #${20605s,22336s,22119s,23922s !DEN}
+sim-time-limit = ${18010s, 19010s, 20010s, 21010s, 22010s, 23010s, 28010s, 29010s, 30010s !DEN} #28000s #${20605s,22336s,22119s,23922s !DEN}
 
 #repeat=5
 
