seleccionar nuevos intervalos scenario 9

--- a/src/networks/MoST_Scenario/omnetpp2.ini
+++ b/src/networks/MoST_Scenario/omnetpp2.ini
@@ -104,7 +104,7 @@ print-undisposed = false
 ##########################################################
 *.node[*].applType = "ca_system.modules.application.myWaveAppLayer"
 *.**.appl.headerLength = 80 bit
-*.**.appl.sendBeacons = false #true
+*.**.appl.sendBeacons = true
 *.**.appl.dataOnSch = false
 *.**.appl.beaconInterval = 1s
 *.**.appl.beaconUserPriority = 5
@@ -130,7 +130,7 @@ print-undisposed = false
 ###################################################
 ## All nodes send beacons with r=1Hz,2Hz,5Hz,10Hz #
 ###################################################
-[Config Ped_Crossing-BL-NoObstacle-S8]
+[Config Ped_Crossing-BL-NoObstacle-S9]
 
 **.vector-recording = false
 cmdenv-express-mode = true
@@ -141,7 +141,7 @@ cmdenv-express-mode = true
 
 # Set Scenario 
 
-*.manager.firstStepAt = ${DEN = 18000s, 19000s, 20000s, 21000s, 22000s, 23000s, 28000s, 29000s, 30000s}  #18000s #${DEN=20595s,22326s,22109s,23912s} #33500s,38500s} # 18500s,43500s} 
+*.manager.firstStepAt = ${DEN = 19000s, 22000s, 29000s, 30000s}  #18000s #${DEN=20595s,22326s,22109s,23912s} #33500s,38500s} # 18500s,43500s} 
 *.manager.roiRects = "4735,2215-4935,2415"
 
 *.**.appl.Slotted1Enabled = true
@@ -165,7 +165,7 @@ cmdenv-express-mode = true
 *.node[10].appl.MeInAcc = false
 
 
-sim-time-limit = ${18010s, 19010s, 20010s, 21010s, 22010s, 23010s, 28010s, 29010s, 30010s !DEN} #28000s #${20605s,22336s,22119s,23922s !DEN}
+sim-time-limit = ${19010s, 22010s, 29010s, 30010s !DEN} #28000s #${20605s,22336s,22119s,23922s !DEN}
 
 #repeat=5
 
