Escenario S10 y extraccion de resultados

--- a/src/networks/MoST_Scenario/omnetpp2.ini
+++ b/src/networks/MoST_Scenario/omnetpp2.ini
@@ -15,7 +15,7 @@ network = MoST_scenario
 debug-on-errors = false
 print-undisposed = false
 
-#sim-time-limit = 1000s
+# sim-time-limit = 1000s
 
 **.scalar-recording = true
 **.vector-recording = false
@@ -36,7 +36,7 @@ print-undisposed = false
 # Obstacle parameters                                    #
 ##########################################################
 *.obstacles.debug = false
-#*.obstacles.obstacles = xmldoc("config.xml", "//AnalogueModel[@type='SimpleObstacleShadowing']/obstacles")
+*.obstacles.obstacles = xmldoc("config.xml", "//AnalogueModel[@type='SimpleObstacleShadowing']/obstacles")
 
 ##########################################################
 #            TraCIScenarioManager parameters             #
@@ -104,7 +104,7 @@ print-undisposed = false
 ##########################################################
 *.node[*].applType = "ca_system.modules.application.myWaveAppLayer"
 *.node[*].appl.headerLength = 80 bit
-*.node[*].appl.sendBeacons = true
+*.node[*].appl.sendBeacons = false #true
 *.node[*].appl.dataOnSch = false
 *.node[*].appl.beaconInterval = 1s
 *.node[*].appl.beaconUserPriority = 5
@@ -113,7 +113,7 @@ print-undisposed = false
 
 *.Pednode[*].applType = "ca_system.modules.application.PedAppLayer"
 *.Pednode[*].appl.headerLength = 80 bit
-*.Pednode[*].appl.sendBeacons = true
+*.Pednode[*].appl.sendBeacons = false #true
 *.Pednode[*].appl.dataOnSch = false
 *.Pednode[*].appl.beaconInterval = 1s
 *.Pednode[*].appl.beaconUserPriority = 5
@@ -122,7 +122,7 @@ print-undisposed = false
 
 *.Bicyclenode[*].applType = "ca_system.modules.application.CycleAppLayer"
 *.Bicyclenode[*].appl.headerLength = 80 bit
-*.Bicyclenode[*].appl.sendBeacons = true
+*.Bicyclenode[*].appl.sendBeacons = false #true
 *.Bicyclenode[*].appl.dataOnSch = false
 *.Bicyclenode[*].appl.beaconInterval = 1s
 *.Bicyclenode[*].appl.beaconUserPriority = 5
@@ -131,7 +131,7 @@ print-undisposed = false
 
 *.Bikenode[*].applType = "ca_system.modules.application.CycleAppLayer"
 *.Bikenode[*].appl.headerLength = 80 bit
-*.Bikenode[*].appl.sendBeacons = true
+*.Bikenode[*].appl.sendBeacons = false #true
 *.Bikenode[*].appl.dataOnSch = false
 *.Bikenode[*].appl.beaconInterval = 1s
 *.Bikenode[*].appl.beaconUserPriority = 5
@@ -169,7 +169,7 @@ print-undisposed = false
 ###################################################
 ## All nodes send beacons with r=1Hz,2Hz,5Hz,10Hz #
 ###################################################
-[Config Ped_Crossing-BL-NoObstacle-S9]
+[Config Ped_Crossing-BL-Obstacle-S10]
 
 **.vector-recording = false
 cmdenv-express-mode = true
@@ -180,7 +180,7 @@ cmdenv-express-mode = true
 
 # Set Scenario 
 
-*.manager.firstStepAt = ${DEN = 19000s, 22000s, 29000s, 30000s}  #18000s #${DEN=20595s,22326s,22109s,23912s} #33500s,38500s} # 18500s,43500s} 
+*.manager.firstStepAt = 30000s #${DEN = 19000s, 22000s, 29000s, 30000s}  #18000s #${DEN=20595s,22326s,22109s,23912s} #33500s,38500s} # 18500s,43500s} 
 *.manager.roiRects = "4735,2215-4935,2415"
 
 #########################
@@ -265,15 +265,15 @@ cmdenv-express-mode = true
 
 
 
-sim-time-limit = ${19010s, 22010s, 29010s, 30010s !DEN} #28000s #${20605s,22336s,22119s,23922s !DEN}
+sim-time-limit = 30020s #${19010s, 22010s, 29010s, 30010s !DEN} #28000s #${20605s,22336s,22119s,23922s !DEN}
 
-repeat=5
+repeat=10
 
 
 ###########################################################
 ## Only VRU OnStreet send beacons with r=1Hz,2Hz,5Hz,10Hz #
 ###########################################################
-[Config Ped_Crossing-OnStreet-S4]
+[Config Ped_Crossing-OnStreet-S10]
 
 **.vector-recording = false
 cmdenv-express-mode = true
@@ -284,7 +284,7 @@ cmdenv-express-mode = true
 
 # Set Scenario 
 
-*.manager.firstStepAt = ${DEN=20599s,22330s,22113s,23916s}
+*.manager.firstStepAt = 30000s #${DEN=20599s,22330s,22113s,23916s}
 *.manager.roiRects = "4735,2215-4935,2415"
 
 #########################
@@ -375,15 +375,15 @@ cmdenv-express-mode = true
 *.Bikenode[*].appl.OnStreet = true
 
 
-sim-time-limit = ${20602s,22333s,22116s,23919s !DEN}
+sim-time-limit = 30020s #${20602s,22333s,22116s,23919s !DEN}
 
-repeat=5
+repeat=10
 
 
 ###############################################################
 ## Only VRU whit Speed>0 send beacons with r=1Hz,2Hz,5Hz,10Hz #
 ###############################################################
-[Config Ped_Crossing-MovinPed-S4]
+[Config Ped_Crossing-MovinPed-S10]
 
 #**.vector-recording = true
 #**.debug = true
@@ -397,7 +397,7 @@ repeat=5
 
 # Set Scenario 
 
-*.manager.firstStepAt = ${DEN=20599s,22330s,22113s,23916s}
+*.manager.firstStepAt = 30000s ${DEN=20599s,22330s,22113s,23916s}
 *.manager.roiRects = "4735,2215-4935,2415"
 
 #########################
@@ -488,14 +488,14 @@ repeat=5
 *.Bikenode[*].appl.MovinPed = true
 
 
-sim-time-limit = ${20602s,22333s,22116s,23919s !DEN}
-repeat=5
+sim-time-limit = 30020s #${20602s,22333s,22116s,23919s !DEN}
+repeat=10
 
 ########################################################
 ## VRU whit Speed>0 send beacons with r=5Hz else r=2Hz #
 ########################################################
 
-[Config Ped_Crossing-MultipleTx-S4]
+[Config Ped_Crossing-MultipleTx-S10]
 
 **.vector-recording = false
 cmdenv-express-mode = true
@@ -506,7 +506,7 @@ cmdenv-express-mode = true
 
 # Set Scenario 
 
-*.manager.firstStepAt = ${DEN=20599s,22330s,22113s,23916s}
+*.manager.firstStepAt =  30000s #${DEN=20599s,22330s,22113s,23916s}
 *.manager.roiRects = "4735,2215-4935,2415"
 
 #########################
@@ -595,6 +595,6 @@ cmdenv-express-mode = true
 *.Bikenode[*].appl.MultipleTx = true
 
 
-sim-time-limit = ${20602s,22333s,22116s,23919s !DEN}
+sim-time-limit = 30020s #${20602s,22333s,22116s,23919s !DEN}
 
-repeat=5
+repeat=10
