--- a/src/networks/MoST_Scenario/omnetpp2.ini
+++ b/src/networks/MoST_Scenario/omnetpp2.ini
@@ -104,7 +104,7 @@ print-undisposed = false
 ##########################################################
 *.node[*].applType = "ca_system.modules.application.myWaveAppLayer"
 *.node[*].appl.headerLength = 80 bit
-*.node[*].appl.sendBeacons = false #true
+*.node[*].appl.sendBeacons = true
 *.node[*].appl.dataOnSch = false
 *.node[*].appl.beaconInterval = 1s
 *.node[*].appl.beaconUserPriority = 5
@@ -113,7 +113,7 @@ print-undisposed = false
 
 *.Pednode[*].applType = "ca_system.modules.application.PedAppLayer"
 *.Pednode[*].appl.headerLength = 80 bit
-*.Pednode[*].appl.sendBeacons = false #true
+*.Pednode[*].appl.sendBeacons = true
 *.Pednode[*].appl.dataOnSch = false
 *.Pednode[*].appl.beaconInterval = 1s
 *.Pednode[*].appl.beaconUserPriority = 5
@@ -122,7 +122,7 @@ print-undisposed = false
 
 *.Bicyclenode[*].applType = "ca_system.modules.application.CycleAppLayer"
 *.Bicyclenode[*].appl.headerLength = 80 bit
-*.Bicyclenode[*].appl.sendBeacons = false #true
+*.Bicyclenode[*].appl.sendBeacons = true
 *.Bicyclenode[*].appl.dataOnSch = false
 *.Bicyclenode[*].appl.beaconInterval = 1s
 *.Bicyclenode[*].appl.beaconUserPriority = 5
@@ -131,7 +131,7 @@ print-undisposed = false
 
 *.Bikenode[*].applType = "ca_system.modules.application.CycleAppLayer"
 *.Bikenode[*].appl.headerLength = 80 bit
-*.Bikenode[*].appl.sendBeacons = false #true
+*.Bikenode[*].appl.sendBeacons = true
 *.Bikenode[*].appl.dataOnSch = false
 *.Bikenode[*].appl.beaconInterval = 1s
 *.Bikenode[*].appl.beaconUserPriority = 5
@@ -389,7 +389,7 @@ repeat=10
 #**.debug = true
 #**.coreDebug = 
 
-#cmdenv-express-mode = true
+cmdenv-express-mode = true
 
 # Service Channel
 
@@ -397,7 +397,7 @@ repeat=10
 
 # Set Scenario 
 
-*.manager.firstStepAt = 30000s ${DEN=20599s,22330s,22113s,23916s}
+*.manager.firstStepAt = 30000s # ${DEN=20599s,22330s,22113s,23916s}
 *.manager.roiRects = "4735,2215-4935,2415"
 
 #########################
